Update and rename .env.sample to .env

--- a/conf/.env
+++ b/conf/.env
@@ -1,6 +1,6 @@
 # common config
 TOKEN=*** 微信公众号开发平台设置的token
-botType=** 机器人类型 目前支持(gpt,spark,echo,qwen)例如botType=gpt
+botType=spark 机器人类型 目前支持(gpt,spark,echo,qwen)例如botType=gpt
 subscribe=欢迎你  被关注自动回复词(可选)
 
 # redis config
@@ -9,9 +9,9 @@ KV_URL=redis://localhost:6479/0
 # spark config
 # 此次使用的是3.5，请根据实际情况填写
 sparkUrl=wss://spark-api.xf-yun.com/v3.5/chat
-sparkAppId=xxx
-sparkAppSecret=xxx
-sparkApiKey=xxx
+sparkAppId=009a2206
+sparkAppSecret=MTM3MGMyMTNjYjY0YzY2ZTU4ODhjNmY5
+sparkApiKey=319b4045bc280c8adb76a4fc5926f626
 
 # Chat-GPT config
 GPT_TOKEN=sk-*** 你的gpt token
