--- a/conf/.env
+++ b/conf/.env
@@ -1,7 +1,10 @@
 # common config
-TOKEN=wfeng1982 微信公众号开发平台设置的token
-botType=spark 机器人类型 目前支持(gpt,spark,echo,qwen)例如botType=gpt
-subscribe=欢迎你  被关注自动回复词(可选)
+#微信公众号开发平台设置的token
+TOKEN=wfeng1982
+#机器人类型 目前支持(gpt,spark,echo,qwen)例如botType=gpt
+botType=spark
+#被关注自动回复词(可选)
+subscribe=欢迎你
 
 # redis config
 KV_URL=redis://localhost:6479/0
