--- a/conf/.env
+++ b/conf/.env
@@ -4,7 +4,7 @@ TOKEN=wfeng1982
 #机器人类型 目前支持(gpt,spark,echo,qwen)例如botType=gpt
 botType=spark
 #被关注自动回复词(可选)
-subscribe=欢迎你
+subscribe=欢迎您
 
 # redis config
 KV_URL=redis://localhost:6479/0
@@ -17,11 +17,11 @@ sparkAppSecret=MTM3MGMyMTNjYjY0YzY2ZTU4ODhjNmY5
 sparkApiKey=319b4045bc280c8adb76a4fc5926f626
 
 # Chat-GPT config
-GPT_TOKEN=sk-*** 你的gpt token
-GPT_URL=https://xxx  代理gpt服务器(选填，默认openai官网api)
-gptModel=gpt-3.5-turbo gpt模型(选填,默认gpt-3.5-turbo)
+#GPT_TOKEN=sk-*** 你的gpt token
+#GPT_URL=https://xxx  代理gpt服务器(选填，默认openai官网api)
+#gptModel=gpt-3.5-turbo gpt模型(选填,默认gpt-3.5-turbo)
 
 # QWen config
-qwenUrl=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
-qwenModelVersion=qwen-max
-qwenApiKey=xxx
+#qwenUrl=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
+#qwenModelVersion=qwen-max
+#qwenApiKey=xxx
